--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
   </properties>
 
   <dependencies>
+  <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version> <!-- Make sure to use the latest version -->
+    <scope>provided</scope>
+</dependency>
+
     <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
